<resources>
    <string name="app_name">Чат</string>
    <string name="login_enter">Введите логин</string>
    <string name="enter_password">Введите пароль(8 символов)</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="login_button">Войти</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="hello_text1">Логин</string>
    <string name="hello_text2">Регистрация</string>
    <string name="not_registered">Если у вас нет аккаунта вы можете зарегистрироваться</string>
    <string name="is_registered">Если у вас есть аккаунт вы можете войти</string>
    <string name="toast_text_login_correct">Авторизация успешна, но ты не можешь войти, такого логина не существует</string>
    <string name="login_empty">Вы не заполнили поле логин!</string>
    <string name="password_empty">Вы не заполнили поле пароль!</string>
    <string name="login">Андрей Савченко</string>
    <string name="status">Рыжий кальмар</string>
    <string name="exit">Выйти</string>
    <string name="contacts">Контакты</string>
    <string name="chats">Список чатов</string>
    <string name="enter_text">Введите сообщение</string>
    <string name="send">Отправить</string>
    <string name="create_chat">Нписать сообщение</string>
    <string name="profile">Мой профиль</string>
    <string name="description">Статус: под колпаком</string>
    <string name="birthday">Дата рождения: 01 октября 1990</string>
    <string name="city">Город: Санкт-Петербург</string>
    <string name="see_profile">Посмотреть профиль</string>
    <string name="enter_id">Введите id чата</string>
    <string name="enter_title">Введите тему чата</string>

</resources>
