<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/create_chat"
        app:showAsAction="ifRoom"
        android:icon="@drawable/add_user"/>


    <item
        android:id="@+id/action_message"
        android:orderInCategory="200"
        android:title="@string/enter_text"
        android:icon="@drawable/add_message"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="300"
        android:title="@string/profile"
        app:showAsAction="never"/>

</menu>