<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_login_hover"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_login"
            android:hint="@string/login_enter"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_login_hover"

        android:id="@+id/enter_password_hover">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:id="@+id/enter_password"
            android:inputType="textPassword"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_password_hover"
        android:id="@+id/confirm_password_hover">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_button"
        android:background="@color/colorButtonText"
        android:textColor="@android:color/white"
        android:layout_below="@+id/confirm_password_hover"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:background="@color/colorButtonText"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
